assets/css/main.css
/* general classes */

.boxShadow {
-webkit-box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
-moz-box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
}

.mainBody {
    background-image: url("../images/mordorlandscape.jpg");
    /* background-image: url("../images/mordorportrait.jpg"); */
    background-repeat: no-repeat;
    background-size: cover;
}

/* main sections */
.upperSection {
    height: 40vh;
    /* border: 3px dotted violet; */
}
.middleSection {
    height: 20vh;
}
.lowerSection {
    height: 40vh;
}

/* css targeting uppersection parts */
.mainHeader {
    background-image: url("../images/battlelog.jpg");
    display: flex;
    font-family: 'Lucida Sans', sans-serif;
    font-size: 3vh;
    font-style: italic;
    font-weight: bolder;
    height: 15%;
    align-items:center;
    justify-content:center;
}
.enemyBox {
    max-height: 40%;
}
.selectBox {
    font-family: 'Poppins', sans-serif;
    font-size: 4vmin;
    font-weight: bold;
    text-align: center;
    height:20%;
    background-image:url(../images/silver.jpg);
    border-radius: 20px;
}
.enemyImageHolder {
    height: 80%;
    width: 100%;
    text-align: center;
}

.enemyImage {
    max-width: 100%;
    max-height: 95%;
    position:relative;
}
.enemyStatIndicator {
    text-shadow:
        -1px -1px 0 #F8F8FF,  
        1px -1px 0 #F8F8FF,
        -1px 1px 0 #F8F8FF,
        1px 1px 0 #F8F8FF;
    display: flex;
    font-family: 'Poppins', sans-serif;
    font-size: 3vmin;
    font-weight: bolder;
    align-items:center;
    justify-content:center;
    text-align: center;
    border: 1px solid black;
    background-image: url('../images/wood.jpg')
}
/* css targeting middleSection*/

.resetButton {
    background-image: url("../images/leaf.jpg");
    min-width: 20%;
    font-size: 4.5vmin;
    color: #FFFFF4;
}

.attackButton {
    background-image: url("../images/blood.jpg");
    min-width: 20%;
    font-size: 4.5vmin;
    color: #FFFFF4;
}

.musicButton {
    background-image: url("../images/darkwood.jpg");
    min-width: 20%;
    font-size: 4.5vmin;
    color: #FFFFF4;
}

/* css targeting lowerSection*/

.heroStatBox {
    height: 60%;
    /* justify-content: stretch; */
}
.heroStatIndicator {
    text-shadow:
       -1px -1px 0 #F8F8FF,  
         1px -1px 0 #F8F8FF,
        -1px 1px 0 #F8F8FF,
        1px 1px 0 #F8F8FF;
    display: flex;
    font-family: 'Poppins', sans-serif;
    font-size: 4vmin;
    font-weight: bold;
    align-items: center;
    justify-content:center;
    text-align: center;
    border: 1px solid black;
    background-image: url('../images/wood.jpg')
}

.heroImageBox {
    height: 60%;
    display:flex;
    align-items:center;
    justify-content:center;
}

.heroImage {
    max-width: 100%;
    max-height: 100%;
    position:relative; /*necessary for JS shake function to work*/ 
}

.battleLog {
    background-image: url("../images/battlelog.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    font-family: 'Poppins', sans-serif;
    font-size: 3vmin;
    font-weight: bold;
    text-align: center;
    height: 40%;
    overflow: auto;
}

/* media queries */
/* in the upperSection, the enemy box height needs to be halved (to 40%) because the third enemy will be below the other 2. In bigger viewports (from 'sm'on up, it can be the maximum 80% */
@media (min-width: 540px) {
    .enemyBox {
        max-height: 75%;
    }
    .heroStatBox, .heroImageBox, .battleLog {
        height: 100%;   
    }
}

